--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -21,3 +21,13 @@ footer {
   text-transform: uppercase;
   color: #333;
 }
+
+@media (max-width: 768px) {
+  footer {
+    flex-direction: column;
+    gap: 1rem;
+    text-align: center;
+    margin-left: 2rem;
+    margin-right: 2rem;
+  }
+}
